- ExtraPrep: Fixed some issues with the Rhok'delar quests that can be added
- ExtraPrep: Added class books & Quel'Serrar DireMaul quests to the 'Blacksmithing - Dire Maul' selection
- ExtraPrep: Quests from unselected extraprep no longer shows up on the 'Items' tab
- ExtraPrep: Scepter of the Sands quests now only show items if you have done their prequests

3.15 (2026-01-12)
- We realized 'questlog' quests didn't calculate the correct exp based on your level. Please check that your questlog quests are still good! If quests now give low exp, you need to fix it!
-- 'Summoning Shadra' has been removed as a questlog quest because of this. If you already prepared it, please turn it in (don't abandon)
-- Addon will show a warning as well the first time you log in after updating

- Implemented first version of the new 'Extras - Mailbox' feature. This feature helps manage your items with your bank & mailbox, but is optional.
-- This is pretty complex and a separate description window has been made, please read through it thoroughly if you're interested. We're still testing it, but it's published in case you want to test it or try it out
-- The 'Companion' can be opened from the extras tab, from '/tbcprep companion' or from the buttons added to the Mail & Bank interface.

- Implemented the 'Extras - Extra TBC Prep' feature. A selection of quests can be added to the 'Quests' tab from here, but they are not 'fully' supported everywhere. You should make sure to manage these yourself!
-- Hunters can enable their Rhok'delar class quests here.

- The 'A Bijou for Zanza' fix was lost in the 3.14b update. It's now back again ^_^
- Added a '/tbcprep ghetto' command to ghetto HS in dungeons, without needing a macro. It will leave your current party first if you're in one.
- Updated the 'About' tab with correct version number and the 3.15 questlog warning.

- Added initial note and warning to turnin guide
- Added PvP quests to all routes and UI